--- a/src/Products.css
+++ b/src/Products.css
@@ -1,7 +1,7 @@
 .card img {
     width: 100%;
-    max-width: 240px;
-    max-height: 280px;
+    width: 240px;
+    height: 240px;
     display: block;
     object-fit: cover;
     border-radius: 15px;
@@ -27,7 +27,7 @@
 
 .card {
     height: 400px;
-    width: 240px;
+    width:240px;
     border: 5px solid white;
     border-radius: 15px;
     margin: 15px;
@@ -36,7 +36,7 @@
     justify-content: center;
     text-align: center;
     overflow: hidden;
-    background-color: royalblue;
+    background-color: #5d5a88;
     color: white;
 }
 
@@ -48,19 +48,19 @@
 .products {
     margin: 20px auto;
     display: flex;
-    grid-template-columns: repeat(3, 15%);
-    width: 80%;
+    grid-template-columns: repeat(4, 25%);
+    width: 100%;
     justify-content: space-around;
     flex-wrap: wrap;
     align-items: center;
-    border: 2px solid black;
+    border: 2px solid #5a5d88;
     border-radius: 25px;
-    background-color: gold;
+    background-color: #ffffff;
 }
 
 .product-add-button {
     font-size: 18px;
-    background-color: red;
+    background-color: rgb(156, 156, 223);
     color: white;
     cursor: pointer;
     text-transform: uppercase;
@@ -74,12 +74,12 @@
 .product-add-button:hover {
     transform: translateY(5px);
     transition: 1s;
-    background-color: gold;
+    background-color:rgb(156, 156, 223);
 }
 
 .product-add-button:focus {
     transform: translateY(5px);
-    background-color: red;
-    color: gold;
+    background-color: rgb(156, 156, 223);
+    color: rgb(218, 218, 223);
     transition: 1s;
 }
